// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object with the total and the list of items 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 12599,
        "title": "Adidas Shoes - Men",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 12099,
        "title": "Adidas Shoes - Women",
      },
      "quantity": 2,
    },
  ],
  "total": Object {
    "amount": 49396,
    "currency": "BRL",
    "precision": 2,
  },
}
`;

exports[`Cart checkout() should return an object with the total and the list of items when summary() is called 1`] = `
Object {
  "formatted": "R$493.96",
  "items": Array [
    Object {
      "product": Object {
        "price": 12599,
        "title": "Adidas Shoes - Men",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 12099,
        "title": "Adidas Shoes - Women",
      },
      "quantity": 2,
    },
  ],
  "total": Object {
    "amount": 49396,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
